--- a/clusters/dev/kustomization.yaml
+++ b/clusters/dev/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - flux-system
   - ../../infrastructure/dev
-  - app-repo-source.yaml
+  - apps-gitops-source.yaml
+  - image-update.yaml
+  - applications
