--- a/clusters/dev/applications/nodejs-greeting-api.yaml
+++ b/clusters/dev/applications/nodejs-greeting-api.yaml
@@ -1,19 +1,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: nodejs-greeting-api-dev
+  name: nodejs-greeting-api
   namespace: flux-system
 spec:
-  interval: 5m0s
-  path: ./apps/nodejs_greeting_api/dev
-  prune: true
+  interval: 1m0s
   sourceRef:
     kind: GitRepository
     name: apps-gitops
+  path: "./apps/nodejs_greeting_api/dev"
+  prune: true
   validation: client
-  targetNamespace: greeting-apis
   healthChecks:
-    - apiVersion: apps/v1
-      kind: Deployment
-      name: nodejs-api
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: nodejs-greeting-api
       namespace: greeting-apis
