--- a/clusters/dev/image-update.yaml
+++ b/clusters/dev/image-update.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: apps-gitops
+    name: gitops-apps
   git:
     checkout:
       ref:
@@ -38,7 +38,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: apps-gitops
+    name: gitops-apps
   git:
     checkout:
       ref:
@@ -68,7 +68,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: apps-gitops
+    name: gitops-apps
   git:
     checkout:
       ref:
@@ -98,7 +98,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: apps-gitops
+    name: gitops-apps
   git:
     checkout:
       ref:
